--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
 <h1>Prices</h1>
-
+        <ul>
+            <li>CS is fun to learn</li>
+             <li>CS is creative</li>
+            <li>CS is artisitc</li>
+        </ul>
     </body>
 </html>
