--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
              <li>CS is creative</li>
             <li>CS is artisitc</li>
         </ul>
-    </body>
+        <table>
+            <tr><td>Item</td> <td>Price</td></tr>
+            <tr><td>Basic Learning Skills</td> <td>Free</td></tr>  
+            <tr><td>Watching Live Videos</td> <td> Always Free</td></tr>
+            </body>
 </html>
