--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
             <tr><td>Item</td> <td>Price</td></tr>
             <tr><td>Basic Learning Skills</td> <td>Free</td></tr>  
             <tr><td>Watching Live Videos</td> <td> Always Free</td></tr>
+        </table>
             </body>
 </html>
