--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
 <h1>Prices</h1>
+        <h2><strong>New CLass</strong><h2>
         <ul>
             <li>CS is fun to learn</li>
              <li>CS is creative</li>
