add change h2 below the list

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
             <tr><td>Basic Learning Skills</td> <td>Free</td></tr>  
             <tr><td>Watching Live Videos</td> <td> Always Free</td></tr>
         </table>
-            </body>
+            <h2><strong>New CLass</strong><h2>           
+                </body>
 </html>
