add journey to class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <tr><td>Basic Learning Skills</td> <td>Free</td></tr>  
             <tr><td>Watching Live Videos</td> <td> Always Free</td></tr>
         </table>
-            <h2><strong>New CLass</strong><h2>           
+            <h2>New Class<h2>      
+                <strong>"Adventurous Journey"</strong>
                 </body>
 </html>
