--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 <h1>Prices</h1>
-        <h2><strong>New CLass</strong><h2>
+        
         <ul>
             <li>CS is fun to learn</li>
              <li>CS is creative</li>
@@ -19,5 +19,12 @@
         </table>
             <h2>New Class<h2>      
                 <strong>"Adventurous Journey"</strong>
+                <p> 
+                    All classes of computer science are engaging, exciting, creative, and adventurous.<br>
+                    In the classes you could use different software for artisitic minded invididuals, technical software for tech savvy individuals.<br>
+                    What you won't find is no student that is not engaged in the learning hands-on process?<br>
+                    Next time you are thinking what class you should pick, think some type of computer science class.<br>
+                    
+                </p>
                 </body>
 </html>
