added skill lists

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                     In the classes you could use different software for artisitic minded invididuals, technical software for tech savvy individuals.<br>
                     What you won't find is no student that is not engaged in the learning hands-on process?<br>
                     Next time you are thinking what class you should pick, think some type of computer science class.<br>
+                    <ol>
+                        <li>Problem-solving</li>
+                        <li>Communication</li>
+                        <li>Artistic</li>
+                        <li>flexible</li>
+                        <li>creative</li>
+                </ol>  
                     
                 </p>
                 </body>
